<resources>
    <string name="app_name">NASA</string>
    <string name="pic_url">https://firebasestorage.googleapis.com/v0/b/nasadiscuss.appspot.com/o/users%2F%1$s.jpg?alt=media</string>

    <string name="nickname">Nickname</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Create new account</string>
    <string name="login">Go to Sign-Up</string>
    <string name="sign_up">Sign-Up</string>
    <string name="sign_out">Sign-Out</string>
    <string name="profile">Profile</string>
    <string name="profile_nickname">Nickname:</string>
    <string name="your_comment">Your comment:</string>
    <string name="send">Send</string>
    <string name="user_not_signed_alert">You need to be signed-in to leave comments!</string>
    <string name="liked_posts">Liked Posts:</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
</resources>